examples/templates/ingress/sample-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: venafi-tpp-ingress-coffee
  namespace: sandbox
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - coffee.${JS_JETSTACKER_DOMAIN_NAME}
    secretName: coffee.${JS_JETSTACKER_DOMAIN_NAME}
  rules:
  - host: coffee.${JS_JETSTACKER_DOMAIN_NAME}
    http:
      paths:
      - path: /coffee
        pathType: Prefix
        backend:
          service:
            name: coffee-svc
            port: 
              number: 80
